[package]
name = "snowlog"
version = "0.1.1"
edition = "2024"
authors = ["snowmerak <snowmerak@outlook.com>"]
description = "A structured logging library for Rust with JSON output and rotation support"
license = "MPL-2.0"
repository = "https://github.com/snowmerak/rogger"
keywords = ["log", "logger", "rust", "development"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
